<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnAñadir">Añadir Cliente</string>
    <string name="tvName">&#160;&#160;*Obligatorio</string>
    <string name="nameHint">Nombre</string>
    <string name="tvEmail">&#160;&#160;*Obligatorio</string>
    <string name="emailHint">Email</string>
    <string name="phoneHint">Teléfono</string>
    <string name="cityHint">Ciudad</string>
    <string name="AddressHint">Dirección</string>
    <string name="toastMessage" translatable="false">Coming Soon...</string>

</resources>